Update gitignore and the dependencies